# UTube-Leads-generating-Agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_videos_and_quota.py  0003_subscriptions.py  0004_users.py  0005_niches.py  0006_subscription_payment_ref.py  0007_lead_statuses.py
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  channel_analysis.py  country_validation.py  discovery.py  enrichment.py  manager.py  metrics.py  performance.py  scoring.py
backend/app/api/v1/: auth.py  billing.py  leads.py  maintenance.py  niches.py  pipeline.py  quota.py  router.py
backend/app/billing/: plans.py  razorpay.py
backend/app/common/: countries.py  daylimit.py  language.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/domain/: models.py  schemas.py
backend/app/integrations/youtube/: __init__.py  api.py  base.py  cache.py  errors.py  mock.py  quota.py  ratelimit.py
backend/app/niches/: catalog.py  seed.py
backend/app/repositories/: leads.py
backend/app/services/: excel.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: reenrich.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_billing.py  test_enrichment.py  test_metrics.py  test_pipeline.py  test_razorpay.py  test_youtube_api.py
docs/: ARCHITECTURE.md  ROADMAP.md
exports/: cip_leads.xlsx
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx  (+2 more)
(+20 files in other folders)
